--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.2.0",
     "react-ionicons": "^4.2.1",
     "react-router-dom": "^6.22.3",
