--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.14.3",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/raf": "^3.4.3"
   }
 }
